refactor: 调整loopDatabase mex接口

--- a/mex/CMakeLists.txt
+++ b/mex/CMakeLists.txt
@@ -18,7 +18,7 @@ if(OPENCV_VERSION_3)
 set(mainCreateDatabase createDatabase)
 message(STATUS "我的子mex文件名字：${mainCreateDatabase}")
 
-add_library(${mainCreateDatabase} SHARED retrieveImageDBOW3.cpp)
+add_library(${mainCreateDatabase} SHARED loopDatabase.cpp)
 target_include_directories(${mainCreateDatabase} PUBLIC ${PROJECT_SOURCE_DIR}/src ${Matlab_INCLUDE_DIRS})
 target_link_libraries(${mainCreateDatabase} ${PROJECT_NAME} ${MATLAB_LIBRARIES})
     if(WIN32)
