✨ feat: add DBOW3 support

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -233,6 +233,8 @@ ENDIF()
 
 add_subdirectory(mex)
 
+add_subdirectory(c_file)
+
 # ----------------------------------------------------------------------------
 # display status message for important variables
 # ----------------------------------------------------------------------------
