✨ feat: refine opencv_API

--- a/c_file/CMakeLists.txt
+++ b/c_file/CMakeLists.txt
@@ -1,3 +1,3 @@
-add_library(loopDatabase_x86_64 STATIC loopDatabase_x86_64.cpp)
+add_library(loopDatabase_x86_64 STATIC loopDatabase_x86_64.cpp opencvAPI.cpp)
 target_include_directories(loopDatabase_x86_64 PUBLIC ${PROJECT_SOURCE_DIR}/src)
 target_link_libraries(loopDatabase_x86_64 ${PROJECT_NAME} )
