--- a/utils/CMakeLists.txt
+++ b/utils/CMakeLists.txt
@@ -8,4 +8,5 @@ ADD_EXECUTABLE(create_voc_step0 create_voc_step0.cpp)
 ADD_EXECUTABLE(create_voc_step1 create_voc_step1.cpp)
 add_executable(demo_queryImg demo_queryImg.cpp)
 INSTALL(TARGETS  demo_general  create_voc_step0  create_voc_step1  demo_queryImg RUNTIME DESTINATION bin)
+set(EXECUTABLE_OUTPUT_PATH  ${PROJECT_SOURCE_DIR})
 ENDIF()
